# Caliope

./: .gitignore  .gitmodules  BuildProject.bat  CMakeLists.txt  Dependencies.cmake  LICENSE.md  PostBuild.bat  README.md  get_files.txt
assets/materials/: background.cemat  character1.cemat  character2.cemat  scene.cemat  spritesheet.cemat  transparency.cemat  ui_button_test.cematui  ui_image_test.cematui
assets/scenes/: scene_test1.cescene  scene_test2.cescene
assets/shaders/: Builtin.ObjectPickShader.ceshaderconfg  Builtin.ObjectPickShader.vert.glsl  Builtin.ObjectPickShader.vert.spv  Builtin.SpritePickShader.frag.glsl  Builtin.SpriteShader.ceshaderconfg  Builtin.SpriteShader.frag.glsl  Builtin.SpriteShader.frag.spv  Builtin.SpriteShader.vert.glsl  Builtin.SpriteShader.vert.spv  Builtin.TestShaderForBatchRenderDelete.frag.glsl  Builtin.TestShaderForBatchRenderDelete.frag.spv  Builtin.UIObjectPickShader.ceshaderconfg  Builtin.UIObjectPickShader.frag.glsl  Builtin.UIObjectPickShader.frag.spv  Builtin.UIShader.ceshaderconfg  Builtin.UIShader.frag.glsl  Builtin.UIShader.frag.spv  Builtin.UIShader.vert.glsl  Builtin.UIShader.vert.spv  Builtin.WorldObjectPickShader.ceshaderconfg  Builtin.WorldObjectPickShader.frag.glsl
assets/sprite_animations/: witch_idle.cesprtanim
assets/text_styles/: test_style.cetxst
assets/ui_layouts/: ui_layout_test.ceuilay
engine/: CMakeLists.txt
engine/src/: cepch.h  defines.h  entry.h  program_types.h
engine/src/audio/: audio_frontend.h  audio_frontend_openal.cpp
engine/src/components/: components.inl
engine/src/containers/: freelist.cpp  freelist.h  ring_queue.cpp  ring_queue.h
engine/src/core/: application.cpp  application.h  asserts.h  cememory.cpp  cememory.h  cestring.cpp  cestring.h  cethread.h  event.cpp  event.h  input.cpp  input.h  logger.cpp  logger.h
engine/src/loaders/: audio_loader.cpp  audio_loader.h  binary_loader.cpp  binary_loader.h  image_loader.cpp  image_loader.h  material_loader.cpp  material_loader.h  resources_types.inl  scene_loader.cpp  scene_loader.h  shader_loader.cpp  shader_loader.h  sprite_animation_loader.cpp  sprite_animation_loader.h
engine/src/math/: math_types.inl  transform.cpp  transform.h
engine/src/memory/: dynamic_allocator.cpp  dynamic_allocator.h
engine/src/platform/: file_system.cpp  file_system.h  platform.h  platform_win32.cpp
engine/src/renderer/: camera.cpp  camera.h  renderer_backend.cpp  renderer_backend.h  renderer_frontend.cpp  renderer_frontend.h  renderer_types.inl
engine/src/renderer/views/: object_pick_render_view.cpp  object_pick_render_view.h  ui_render_view.cpp  ui_render_view.h  world_render_view.cpp  world_render_view.h
engine/src/renderer/vulkan/: vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_device.cpp  vulkan_device.h  vulkan_image.cpp  vulkan_image.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_renderpass.cpp  vulkan_renderpass.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_types.inl  vulkan_utils.cpp  vulkan_utils.h
engine/src/resources/: resources_types.inl
engine/src/resources/loaders/: audio_loader.cpp  audio_loader.h  binary_loader.h  entity_loader.cpp  entity_loader.h  image_loader.h  material_loader.cpp  material_loader.h  scene_loader.cpp  scene_loader.h  shader_loader.cpp  shader_loader.h  sprite_animation_loader.h  text_font_loader.cpp  text_font_loader.h  text_style_loader.cpp  text_style_loader.h
engine/src/resources/parsers/: entity_parser.cpp  entity_parser.h  scene_parser.cpp  scene_parser.h
engine/src/systems/: audio_system.cpp  audio_system.h  camera_system.cpp  camera_system.h  ecs_system.cpp  ecs_system.h  geometry_system.cpp  geometry_system.h  job_system.cpp  job_system.h  material_system.cpp  material_system.h  object_pick_system.cpp  object_pick_system.h  render_view_system.cpp  render_view_system.h  resource_system.cpp  resource_system.h  scene_system.cpp  scene_system.h  shader_system.cpp  shader_system.h  sprite_animation_system.cpp  sprite_animation_system.h  text_font_system.cpp  text_font_system.h  text_style_system.cpp  text_style_system.h  texture_system.cpp  texture_system.h  ui_system.cpp  ui_system.h
testbed/: CMakeLists.txt
testbed/src/: entry.cpp  program.cpp  program.h
